@@ -41,6 +41,7 @@
 #define main emulated_main
 #else
 #include "mcu/cortex-m.h"
+#include "mcu/stm32.h"
 #include "mcu/stm32f103.h"
 #endif
 
