@@ -1558,6 +1558,10 @@ extern int usb_get_status_interface (struct usb_dev *dev);
 
 extern int usb_get_descriptor (struct usb_dev *dev);
 
+extern void random_init (void);
+extern void random_fini (void);
+
+
 /*
  * Return 0 for normal USB event
  *       -1 for USB reset
@@ -1649,12 +1653,14 @@ usb_event_handle (struct usb_dev *dev)
 
     case USB_EVENT_DEVICE_SUSPEND:
       led_blink (LED_OFF);
+      random_fini ();
       chopstx_conf_idle (2);
       bDeviceState |= USB_DEVICE_STATE_SUSPEND;
       break;
 
     case USB_EVENT_DEVICE_WAKEUP:
       chopstx_conf_idle (1);
+      random_init ();
       bDeviceState &= ~USB_DEVICE_STATE_SUSPEND;
       break;
 
