@@ -8,7 +8,8 @@
 	* src/main.c (main): Call chopstx_conf_idle.
 
 	* src/usb-ccid.c (usb_event_handle): Use 2 for call of
-	chopstx_conf_idle on suspend.
+	chopstx_conf_idle on suspend.  Call random_fini on suspend
+	to stop ADC module.  Call random_init on wakeup.
 
 2017-11-16  NIIBE Yutaka  <gniibe@fsij.org>
 
